# lightshow

./: 0current_config.txt  2 monitor.ini  3monitor-wall.ini  Cargo.toml
.github/workflows/: rust.yml
src/: arduino.rs  backend.rs  config.rs  gui.rs  hardware_interaction.rs  logger.rs  main.rs  screen_capture copy.rs  screen_capture.rs
